--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,14 @@
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethereal-email": "^1.0.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "googleapis": "^162.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^7.0.9"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
