--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,11 @@ temp/
 ehthumbs.db
 Thumbs.db
 
+# Screenshots
+Screenshot*.png
+Screenshot*.jpg
+Screenshot*.jpeg
+
 # IDE files
 .vscode/
 .idea/
